syntax = "proto2";
package service;

service Brongnal {
	rpc RegisterPreKeyBundle (RegisterPreKeyBundleRequest) returns (RegisterPreKeyBundleResponse);
	rpc RequestPreKeys (RequestPreKeysRequest) returns (PreKeyBundle);
	rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
	rpc RetrieveMessages (RetrieveMessagesRequest) returns (stream Message);
}

message SignedPreKey {
	optional bytes pre_key = 1;
	optional bytes signature = 2;
}

message SignedPreKeys {
	repeated bytes pre_keys = 1;
	optional bytes signature = 2;
}

message RegisterPreKeyBundleRequest {
	optional string identity = 1;
	optional bytes identity_key = 2;
	optional SignedPreKey signed_pre_key = 3;
	optional SignedPreKeys one_time_key_bundle = 4;
}

message RegisterPreKeyBundleResponse {}


message RequestPreKeysRequest {
	optional string identity = 1;
}

message PreKeyBundle {
	optional bytes identity_key = 1;
	optional bytes one_time_key = 2;
	optional SignedPreKey signed_pre_key = 3;
}

message Message {
	optional string sender_identity = 1;
	optional bytes sender_identity_key = 2;
	optional bytes ephemeral_key = 3;
	optional bytes one_time_key = 4;
	optional bytes ciphertext = 5;
}

message SendMessageRequest {
	optional string recipient_identity = 1;
	optional Message message = 2;
}

message SendMessageResponse {}

message RetrieveMessagesRequest {
	optional string identity = 1;
}

